--- a/src/pages/docs/specification.astro
+++ b/src/pages/docs/specification.astro
@@ -3,12 +3,12 @@ import { marked } from 'marked'
 import Layout from '../../layouts/Layout.astro'
 
 const response = await fetch(
-  'https://raw.githubusercontent.com/christoffercarlsson/autograph/main/docs/specification.md'
+  'https://raw.githubusercontent.com/christoffercarlsson/autograph/main/docs/specification/README.md'
 )
 const markdown = await response.text()
 const content = marked.parse(markdown)
 ---
 
 <Layout title='Specification'>
-  <div set:html={content}></div>
+  <div set:html={content} />
 </Layout>
